fix ipad pro vertical screen overflow

--- a/css/main.css
+++ b/css/main.css
@@ -499,8 +499,8 @@ table {
 
 .mysharebuttom3{color: #3f729b;}
 
-.item{margin: 125px auto 0 auto;}
-
+/*.item{margin: 125px auto 0 auto;}
+*/
 }
 
 @media screen and (max-width: 768px) {
